--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>2.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.nowcoder</groupId>
+    <groupId>com.yc</groupId>
     <artifactId>communtiys</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
@@ -65,8 +65,8 @@
             <version>3.9</version>
         </dependency>
         <dependency>
-            <groupId>com.github.penggle</groupId>
             <!--验证码需要的包	-->
+            <groupId>com.github.penggle</groupId>
             <artifactId>kaptcha</artifactId>
             <version>2.3.2</version>
         </dependency>
@@ -93,6 +93,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.yc.community</groupId>-->
+            <!--<artifactId>communitys</artifactId>-->
+            <!--<version>0.0.1-SNAPSHOT</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
