--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 server:
-  port: 8080
+  port: 8081
+  servlet:
+    context-path: /communitys
   # 应用的上下文路径，也可以称为项目路径，是构成url地址的一部分。
   #server.servlet.context-path不配置时，默认为/，如：localhost：8080/xxxxxx
   #当server.servlet.context-path有配置时，比如/demo，此时的访问方式为localhost：8080/demo/xxxxxx
-  servlet:
-    context-path: /communitys
+
 
 spring:
   thymeleaf:
@@ -43,4 +44,9 @@ mybatis:
 logging:
   level:
     org.springframework.data.convert.CustomConversions: ERROR
+
+# 网站域名
+communitys:
+  path:
+    domain: http://localhost:8081
 
