--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--spring整合kafka-->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
