--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,18 +6,16 @@ server:
   #server.servlet.context-path不配置时，默认为/，如：localhost：8080/xxxxxx
   #当server.servlet.context-path有配置时，比如/demo，此时的访问方式为localhost：8080/demo/xxxxxx
 
-
 spring:
   thymeleaf:
     cache: false
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+    url: jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: yc12138**
-  main:
-    allow-bean-definition-overriding: true
+
   # 邮箱设置
   mail:
     host: smtp.sina.com
@@ -42,6 +40,17 @@ spring:
       group-id: test-consumer-group
       enable-auto-commit: true
       auto-commit-interval: 3000  # 3000ms自动提交一次
+  #Elasticsearch配置
+  data:
+    elasticsearch:
+      #声明集群的名字
+      cluster-name: nowcoder
+      #声明节点地址，ip:端口  tcp-9300 / http-9200
+      cluster-nodes: 127.0.0.1:9300
+
+  main:
+    allow-bean-definition-overriding: true
+
 
 #如果xml文件跟mapper在同一个目录下，则application.yml中不需要配置下面这个。
 #mybatis.mapper-locations=classpath:mapper/*.xml
