--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>caffeine</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <!--使用Actuator做项目监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
